Update app
- Update jdk version
- Update vue lib version
- Fix antlr program