@@ -14,8 +14,7 @@ plugins {
 }
 
 repositories {
-    // Use JCenter for resolving dependencies.
-    jcenter()
+    mavenCentral()
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -61,7 +60,6 @@ dependencies {
 test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
-    jvmArgs = ['--enable-preview']
 }
 
 jar {
@@ -81,17 +79,14 @@ java {
 javadoc {
     exclude "com/github/matanki_saito/rico/antlr/**"
     options.encoding = 'UTF-8'
-    options.addBooleanOption('-enable-preview', true)
-    options.addStringOption('-release', '15')
+    options.addStringOption('-release', '17')
 }
 
 compileJava {
-    options.compilerArgs += ['--enable-preview']
     options.encoding = 'UTF-8'
 }
 
 compileTestJava {
-    options.compilerArgs += ['--enable-preview']
     options.encoding = 'UTF-8'
 }
 
